# know-code

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ADAPTERS.md  ARCHITECTURE.md  CONFIGURATION.md  GRAPH_SCHEMA.md  QUICKSTART.md  TECHNICAL_DESIGN.md
examples/: framework-adapters.json  know-code.yml  sample-prd.md
src/know_code/: __init__.py  cli.py  cluster.py  config.py  global_graph.py  graph.py  models.py  planner.py  quality.py  repo.py  scanner.py  visualize.py
src/know_code/extractors/: __init__.py  base.py  cpp.py  custom_framework.py  electron_trpc.py  generic.py  ios.py  java.py  protobuf.py  util.py  web.py
tests/: test_scan.py
